# chonnam-clone

./: .env.example  .gitignore  AGENT.md  plan.md  pyproject.toml  run.ps1  software-testing-types.md  test_week02.py  test_week02_extended.py  test_week03.py  test_week03_extended.py  trace_week02.py  trace_week04.py  verify_week03.py  verify_week04.py  week1.md
.claude/: launch.json
AI_use/: week1.md  week2.md  week3.md  week4.md
docs/: RULES.md  WEEK1_IMPLEMENTATION.md  WEEK2_IMPLEMENTATION_PLAN.md  WEEK2_STUDY_AND_ADR.md  WEEK3_IMPLEMENTATION_PLAN.md  WEEK3_STUDY_AND_ADR.md  WEEK3_STUDY_나나의_기록장을_만들다.md  WEEK4_IMPLEMENTATION_PLAN.md  WEEK4_STUDY_AND_ADR.md  ruff_study_guide.md  student-week-sync-CLAUDE.md  troubleshoot-week01-system-prompt.md  troubleshoot-week02-history-duplicated-in-batch.md  troubleshoot-week02-structured-output-extra-data.md  week01-agent-prompt.md  week01-data-and-tool-contracts.md  week01-input-validation.md  week01-test-plan.md  week01-week02-prompt-separation-plan.md  week02-explain-code-flow-practice-260709.md  week02-llm-clarification-response-changes-260712.md  week02-structured-output-implementation-plan.md  week03-code-structure-analysis.md  week03-implementation-plan.md  week03-implementation-summary.md  week03-learning-log.md
fixed/: agent_runtime.py  langchain_trace.py  local_trace_log.py  reference_store.py  week_agent_registry.py
student_parts/: schedule_clarification.py  week01_wake_up_nana.py  week02_structure_natural_language_requests.py  week03_build_nanas_logbook.py  week03_persist_structured_requests.py  (+2 more)
(+36 files in other folders)
