[project]
name = "kanana-schedule-agent"
version = "0.1.0"
description = "Kanana lecture schedule agent project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=0.5",
    "gradio>=6.0",
    "langchain>=1.0",
    "langchain-mcp-adapters>=0.1",
    "langchain-openai>=1.0",
    "mcp>=1.9",
    "numpy>=1.26",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, UP: pyupgrade, B: bugbear, I: isort
select = ["E", "F", "UP", "B", "I"]
ignore = ["F401"]  # 미사용 import 경고 끄기 (학습 중 편의)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
